# purr-data

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE.html  LICENSE.md  Makefile  README.md  README.txt  debuild.md  git_commit.sh  index.md
abstractions/: Makefile  README
debuild/: Makefile  packages-Makefile.patch  precise-configure.patch  userconfig.patch
doc/: Makefile  TODO  font_sizes.pd
extensions/: Makefile
extra/: makefile  output~.pd
l2ork_addons/: README  TODO.txt  cwiid  fftease3.0-32bit  lyonpotpourri  nwjs_version_for_platform.sh  patch-nwjs.sh  pd-l2ork.postrm  register_mimes.sh  remove_svn.sh  rtcmix-in-pd  tar_em_up.sh
l2ork_addons/cwiid/: AUTHORS  Makefile  Makefile.in  NEWS  README  README.md  configure  configure.ac  defs.mak
l2ork_addons/cwiid/.svn/: all-wcprops  entries
l2ork_addons/cwiid/.svn/text-base/: AUTHORS.svn-base  ChangeLog.svn-base  defs.mak.in.svn-base
l2ork_addons/cwiid/common/.svn/: all-wcprops  entries
l2ork_addons/cwiid/common/include/: config.h  lib.mak  lib.mak.in
l2ork_addons/cwiid/common/include/.svn/: all-wcprops  entries
l2ork_addons/cwiid/common/include/.svn/text-base/: app.mak.svn-base  config.h.in.svn-base  dep.mak.svn-base  plugin.mak.svn-base
l2ork_addons/cwiid/doc/: Makefile  Makefile.in  wminput.list
l2ork_addons/cwiid/doc/.svn/: all-wcprops  entries
l2ork_addons/cwiid/doc/.svn/text-base/: Xmodmap.svn-base
l2ork_addons/cwiid/libcwiid/: Makefile  bluetooth.c  bluetooth.d  buttons  command.c  command.d  connect.c  connect.d  cwiid.h  cwiid.pc  cwiid.pc.in  cwiid_internal.h  interface.c  interface.d  libcwiid.so.1  libcwiid.so.1.0  process.c  process.d  state.c  state.d  thread.c  thread.d  util.c  util.d
l2ork_addons/cwiid/libcwiid/.svn/: all-wcprops  entries
l2ork_addons/cwiid/libcwiid/.svn/text-base/: Makefile.in.svn-base  bluetooth.c.svn-base  command.c.svn-base  connect.c.svn-base  cwiid.h.svn-base  cwiid_internal.h.svn-base  interface.c.svn-base  process.c.svn-base  state.c.svn-base  thread.c.svn-base  util.c.svn-base
l2ork_addons/cwiid/lswm/: Makefile  Makefile.in  lswm  lswm.d
l2ork_addons/cwiid/lswm/.svn/: all-wcprops  entries
l2ork_addons/cwiid/lswm/.svn/text-base/: Makefile.in.svn-base  lswm.c.svn-base
l2ork_addons/cwiid/man/: Makefile  Makefile.in
l2ork_addons/cwiid/man/.svn/: all-wcprops  entries
l2ork_addons/cwiid/man/man1/: wmgui.1
l2ork_addons/cwiid/man/man1/.svn/: all-wcprops  entries
l2ork_addons/cwiid/man/man1/.svn/text-base/: wminput.1.svn-base
l2ork_addons/cwiid/python/: Makefile  Makefile.in  Wiimote.c  cwiidmodule.c  setup.py
l2ork_addons/cwiid/python/.svn/: all-wcprops  entries
l2ork_addons/cwiid/python/.svn/text-base/: Wiimote.c.svn-base  setup.py.svn-base
l2ork_addons/cwiid/wmdemo/: Makefile  Makefile.in  wmdemo  wmdemo.d  wmdemo.py
l2ork_addons/cwiid/wmdemo/.svn/: all-wcprops  entries
l2ork_addons/cwiid/wmdemo/.svn/text-base/: Makefile.in.svn-base  wmdemo.c.svn-base
l2ork_addons/cwiid/wmgui/: Makefile  Makefile.in  callbacks.c  interface.c  interface.d  main.c  main.d  support.d  wmgui  wmgui.glade.bak  wmgui.gladep
l2ork_addons/cwiid/wmgui/.svn/: all-wcprops  entries
l2ork_addons/cwiid/wmgui/.svn/text-base/: Makefile.in.svn-base  callbacks.h.svn-base  interface.c.svn-base  interface.h.svn-base  main.c.svn-base
l2ork_addons/cwiid/wminput/: Makefile  Makefile.in  action_enum.awk  action_enum.c  action_enum.d  action_enum.txt  c_plugin.c  c_plugin.d  c_plugin.h  conf.c  conf.d  conf.h  lexer.c  lexer.d  lexer.l  main.d  parser.c  parser.d  parser.y  py_plugin.c  py_plugin.d  py_plugin.h  uinput.c  uinput.d  util.c  util.d  util.h  wminput  y.tab.h
l2ork_addons/cwiid/wminput/.svn/: all-wcprops  entries
l2ork_addons/cwiid/wminput/.svn/text-base/: Makefile.in.svn-base  README.svn-base  main.c.svn-base  wmplugin.h.svn-base
l2ork_addons/cwiid/wminput/configs/: acc_ptr  buttons  gamepad  ir_ptr  neverball  nunchuk_acc_ptr
l2ork_addons/cwiid/wminput/configs/.svn/: all-wcprops  entries
l2ork_addons/cwiid/wminput/configs/.svn/text-base/: acc_led.svn-base  nunchuk_stick2btn.svn-base
l2ork_addons/cwiid/wminput/plugins/: Makefile
l2ork_addons/cwiid/wminput/plugins/.svn/: all-wcprops  entries
l2ork_addons/cwiid/wminput/plugins/.svn/text-base/: Makefile.in.svn-base
l2ork_addons/cwiid/wminput/plugins/acc/: Makefile  acc.c  acc.d
l2ork_addons/cwiid/wminput/plugins/acc/.svn/: all-wcprops  entries
l2ork_addons/cwiid/wminput/plugins/acc/.svn/text-base/: Makefile.in.svn-base  acc.py.svn-base
l2ork_addons/cwiid/wminput/plugins/ir_ptr/: Makefile  ir_ptr.d
l2ork_addons/cwiid/wminput/plugins/ir_ptr/.svn/: all-wcprops  entries
l2ork_addons/cwiid/wminput/plugins/ir_ptr/.svn/text-base/: Makefile.in.svn-base  ir_ptr.c.svn-base
l2ork_addons/cwiid/wminput/plugins/led/: Makefile  led.d
l2ork_addons/cwiid/wminput/plugins/led/.svn/: all-wcprops  entries
l2ork_addons/cwiid/wminput/plugins/led/.svn/text-base/: Makefile.in.svn-base  led.c.svn-base
l2ork_addons/cwiid/wminput/plugins/nunchuk_acc/: Makefile  nunchuk_acc.c  nunchuk_acc.d
l2ork_addons/cwiid/wminput/plugins/nunchuk_acc/.svn/: all-wcprops  entries
l2ork_addons/cwiid/wminput/plugins/nunchuk_acc/.svn/text-base/: Makefile.in.svn-base
l2ork_addons/cwiid/wminput/plugins/nunchuk_stick2btn/: Makefile  Makefile.in  nunchuk_stick2btn.c  nunchuk_stick2btn.d
l2ork_addons/cwiid/wminput/plugins/nunchuk_stick2btn/.svn/: all-wcprops  entries
pd/extra/: Makefile.am  arraylistview.pd  makefile.subdir  output~-help.pd  output~.pd  preset_node_array.pd
pd/extra/bonk~/: bonk~.c
pd/extra/expr~/: makefile  vexp.c  vexp_fun.c  vexp_if.c
pd/extra/fiddle~/: fiddle~.c
pd/extra/loop~/: loop~.c
pd/extra/pd~/: pdsched.c  pd~.c
pd/extra/pique/: pique.c
pd/extra/sigmund~/: sigmund~.c
pd/tkdnd/: CMakeLists.txt  Changelog  Makefile.in  configure  configure.in  pkgIndex.tcl.in
pd/tkdnd/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
pd/tkdnd/cmake/: build.bat  build.sh  build64.sh
pd/tkdnd/demos/: basic.tcl
pd/tkdnd/doc/: tkDND.n
pd/tkdnd/win/: TkDND_OleDND.cpp
(+5301 files in other folders)
