SUBDIRS=bob~ bonk~ choice expr~ fiddle~ loop~ lrshift~ pd~ pique sigmund~ stdout

DIST_SUBDIRS=$(SUBDIRS)

PATCHES=complex-mod~.pd hilbert~.pd output~.pd rev1-final.pd rev1~.pd rev1-stage.pd rev2~.pd rev3~.pd
HELPPATCHES=complex-mod~-help.pd hilbert~-help.pd output~-help.pd rev1~-help.pd rev2~-help.pd rev3~-help.pd 

libpdextradir=$(pkglibdir)/extra

dist_libpdextra_DATA=$(PATCHES) $(HELPPATCHES) 
